[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/aetherspheretitle2.webm" type="VideoStream" id=2]
[ext_resource path="res://menus/MainMenu.gd" type="Script" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 2 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
anchor_left = 0.411133
anchor_top = 0.791667
anchor_right = 0.588867
anchor_bottom = 0.955
text = "Play"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Options" type="Button" parent="."]
anchor_left = 0.62207
anchor_top = 0.791667
anchor_right = 0.884
anchor_bottom = 0.955
margin_right = -86.2161
text = "Options"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Reset" type="Button" parent="."]
anchor_left = 0.0205075
anchor_top = 0.031667
anchor_right = 0.496
anchor_bottom = 0.195
margin_right = 0.0956726
margin_bottom = 0.000167847
text = "Reset Progress"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
